fix: icon alignment

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -70,3 +70,8 @@
   cursor: pointer;
   transition: all 600ms;
 }
+
+.tarefas li{
+  display: flex;
+  align-items: center;
+}
